Tela cheia em todas as telas, fix HTTPS para modo offline, documentaÃ§Ã£o
- Tela cheia: botÃ£o em index, playlist, admin, remote, login (view jÃ¡ tinha)
- getBaseUrl: usa X-Forwarded-Proto/X-Forwarded-Host para URLs HTTPS atrÃ¡s de proxy; evita Mixed Content nos PDFs do modo offline
- DocumentaÃ§Ã£o: docs/README.md (tela cheia, BASE_URL HTTPS), deploy-vps.md (BASE_URL https), atualizar-vps-agora.md (guia + nota BASE_URL), README.md (tela cheia, BASE_URL)

--- a/public/admin.html
+++ b/public/admin.html
@@ -710,6 +710,7 @@
         <nav class="admin-header-nav">
             <a href="/" class="top-nav-link">Tela inicial</a>
             <a href="/playlist" class="top-nav-link">Playlist</a>
+            <button type="button" class="top-nav-link" id="fullscreenBtn" style="cursor:pointer;border:none;font:inherit;color:inherit;">⛶ Tela cheia</button>
             <a href="#" id="adminLogoutLink" class="top-nav-link">Sair</a>
         </nav>
         <div class="connection-status" id="connectionStatus">Conectando...</div>
