--- a/public/remote.html
+++ b/public/remote.html
@@ -284,9 +284,10 @@
             bottom: 0;
             left: 0;
             right: 0;
-            height: 70%;
+            height: 95%;
+            max-height: 100vh;
             background: #1a1a2e;
-            border-radius: 20px 20px 0 0;
+            border-radius: 16px 16px 0 0;
             z-index: 1001;
             transform: translateY(100%);
             transition: transform 0.3s;
@@ -297,78 +298,97 @@
         .drawer.open { transform: translateY(0); }
 
         .drawer-handle {
-            width: 40px;
-            height: 4px;
-            background: rgba(255,255,255,0.3);
+            width: 36px;
+            height: 3px;
+            background: rgba(255,255,255,0.25);
             border-radius: 2px;
-            margin: 10px auto;
+            margin: 4px auto;
+            flex-shrink: 0;
         }
 
         .drawer-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px 20px;
-            border-bottom: 1px solid rgba(255,255,255,0.1);
+            padding: 4px 8px 6px;
+            border-bottom: 1px solid rgba(255,255,255,0.08);
+            flex-shrink: 0;
         }
 
-        .drawer-header h2 { font-size: 1rem; }
+        .drawer-header h2 { font-size: 0.9rem; }
 
         .drawer-close {
             background: rgba(255,255,255,0.1);
             border: none;
             color: #fff;
-            width: 36px;
-            height: 36px;
+            width: 32px;
+            height: 32px;
             border-radius: 50%;
-            font-size: 1.2rem;
+            font-size: 1rem;
             cursor: pointer;
         }
 
         .drawer-content {
             flex: 1;
+            min-height: 0;
             overflow-y: auto;
-            padding: 15px;
+            overflow-x: hidden;
+            padding: 0;
             -webkit-overflow-scrolling: touch;
         }
 
         .slides-grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 10px;
+            grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+            gap: 1px;
+            align-content: start;
         }
 
         .grid-slide {
             background: #0f0f1a;
-            border-radius: 8px;
+            border-radius: 0;
             overflow: hidden;
             cursor: pointer;
-            border: 2px solid transparent;
+            border: 1px solid rgba(255,255,255,0.06);
+            display: flex;
+            flex-direction: column;
+            min-height: 0;
+            aspect-ratio: 16/9;
         }
 
-        .grid-slide.active { border-color: #e94560; }
+        .grid-slide.active { border-color: #e94560; box-shadow: inset 0 0 0 2px #e94560; }
 
         .grid-slide-canvas {
+            flex: 1;
+            min-height: 0;
+            min-width: 0;
             width: 100%;
-            aspect-ratio: 16/9;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            display: block;
             background: #0a0a15;
             overflow: hidden;
+            position: relative;
+            padding: 0;
         }
 
         .grid-slide-canvas canvas {
+            width: 100% !important;
+            min-width: 100%;
             max-width: 100%;
-            max-height: 100%;
+            height: 100%;
+            object-fit: contain;
+            display: block;
+            vertical-align: top;
+            box-sizing: border-box;
         }
 
         .grid-slide-num {
-            padding: 6px;
+            padding: 0 2px 1px;
             text-align: center;
-            font-size: 0.75rem;
+            font-size: 0.65rem;
             font-weight: 600;
             color: #888;
+            flex-shrink: 0;
+            line-height: 1.2;
         }
 
         .grid-slide.active .grid-slide-num { color: #e94560; }
@@ -379,16 +399,26 @@
                 grid-template-columns: 1fr;
                 grid-template-rows: 1fr 1fr;
             }
-            .slides-grid { grid-template-columns: repeat(2, 1fr); }
+            .drawer { height: 96%; }
+            .slides-grid { grid-template-columns: repeat(2, 1fr); gap: 2px; }
         }
 
         @media (orientation: landscape) {
-            .slides-grid { grid-template-columns: repeat(4, 1fr); }
+            .drawer { height: 95%; }
+            .slides-grid { grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap: 2px; }
         }
 
         @media (max-width: 400px) {
             .slides-area { grid-template-columns: 1fr; grid-template-rows: 1fr 1fr; }
-            .slides-grid { grid-template-columns: repeat(2, 1fr); }
+            .drawer { height: 97%; }
+            .drawer-content { padding: 0; }
+            .slides-grid { gap: 1px; grid-template-columns: repeat(2, 1fr); }
+        }
+
+        @media (min-width: 769px) {
+            .drawer { height: 95%; max-height: 95vh; }
+            .drawer-content { padding: 0; }
+            .slides-grid { grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); gap: 1px; }
         }
 
         /* Mobile: só ícones no header, sem texto "Controle remoto" */
@@ -767,8 +797,10 @@
                 
                 canvas.width = finalW;
                 canvas.height = finalH;
-                canvas.style.width = finalW + 'px';
-                canvas.style.height = finalH + 'px';
+                canvas.style.width = '100%';
+                canvas.style.height = '100%';
+                canvas.style.objectFit = 'contain';
+                canvas.style.display = 'block';
                 
                 const ctx = canvas.getContext('2d');
                 ctx.setTransform(1, 0, 0, 1, 0, 0);
