--- a/public/admin.html
+++ b/public/admin.html
@@ -156,40 +156,92 @@
         }
         .playlist-list-wrap {
             flex: 1;
-            overflow-y: auto;
             min-height: 0;
             margin-bottom: 10px;
         }
-        .playlist-list {
-            list-style: none;
+        .playlist-search {
+            display: block;
+            width: 100%;
+            padding: 8px 10px;
+            margin-bottom: 8px;
+            background: #0f0f1a;
+            border: 1px solid #2d2d44;
+            border-radius: 8px;
+            color: #fff;
+            font-size: 0.85rem;
+            box-sizing: border-box;
         }
-        .playlist-list li {
-            margin-bottom: 6px;
+        .playlist-search::placeholder { color: #666; }
+        .playlist-search:hover, .playlist-search:focus {
+            border-color: #4ecdc4;
+            outline: none;
         }
-        .playlist-item {
+        .playlist-search-results {
+            display: none;
+            max-height: 180px;
+            overflow-y: auto;
+            margin-bottom: 8px;
+            background: #0f0f1a;
+            border: 1px solid #2d2d44;
+            border-radius: 8px;
+            padding: 4px 0;
+        }
+        .playlist-search-results.visible {
+            display: block;
+        }
+        .playlist-search-results .playlist-result-item {
+            display: block;
+            width: 100%;
+            padding: 8px 12px;
+            text-align: left;
+            background: transparent;
+            border: none;
+            border-radius: 0;
+            color: #fff;
+            font-size: 0.85rem;
+            cursor: pointer;
+            transition: background 0.15s ease;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            box-sizing: border-box;
+        }
+        .playlist-search-results .playlist-result-item:hover {
+            background: #2d2d44;
+            color: #4ecdc4;
+        }
+        .playlist-search-results .playlist-result-empty {
+            padding: 10px 12px;
+            font-size: 0.8rem;
+            color: #666;
+        }
+        .playlist-select {
             display: block;
             width: 100%;
             padding: 10px 12px;
-            text-align: left;
             background: #0f0f1a;
             border: 1px solid #2d2d44;
             border-radius: 8px;
             color: #fff;
             font-size: 0.85rem;
             cursor: pointer;
-            transition: all 0.2s ease;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
+            appearance: none;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='%23888' viewBox='0 0 16 16'%3E%3Cpath d='M8 11L3 6h10l-5 5z'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-position: right 10px center;
+            padding-right: 32px;
         }
-        .playlist-item:hover {
-            background: #2d2d44;
+        .playlist-select:hover, .playlist-select:focus {
             border-color: #4ecdc4;
-            color: #4ecdc4;
+            outline: none;
         }
-        .playlist-item:disabled {
+        .playlist-select:disabled {
             opacity: 0.6;
             cursor: wait;
+        }
+        .playlist-select option {
+            background: #1a1a2e;
+            color: #fff;
         }
         .playlist-actions {
             display: flex;
@@ -737,11 +789,15 @@
                 </div>
             </div>
 
-            <!-- Playlist: selecionar apresentação -->
+            <!-- Playlist: lista suspensa com apresentações do banco -->
             <div class="playlist-sidebar">
                 <h3>Playlist</h3>
                 <div class="playlist-list-wrap">
-                    <ul class="playlist-list" id="playlistList"></ul>
+                    <input type="text" class="playlist-search" id="playlistSearch" placeholder="Procurar apresentação..." title="Filtrar por título, data ou local" autocomplete="off" />
+                    <div class="playlist-search-results" id="playlistSearchResults" role="listbox" aria-label="Resultados da busca"></div>
+                    <select class="playlist-select" id="playlistSelect" title="Selecionar apresentação">
+                        <option value="">Selecionar apresentação...</option>
+                    </select>
                     <p class="playlist-empty" id="playlistEmpty">Nenhuma apresentação na playlist.</p>
                     <p class="playlist-error" id="playlistError" style="display:none;">Erro ao carregar.</p>
                 </div>
